@@ -40,7 +40,7 @@ texi empty_item.texi
 # for makeinfo
 texi ../coverage/formatting.texi -U texi2html
 def_cmds def_cmds.texi
-#def_cmds_info def_cmds.texi -init info.init
+def_cmds_info def_cmds.texi -init info.init
 menus menus.texi
 menus_simple menus.texi -init simple_menu.init
 quotation quotation.texi
@@ -99,4 +99,4 @@ at_command_glued_info at_command_glued.texi -init info.init
 test_sp_info test_sp.texi -init info.init
 kbdinputstyle_info kbdinputstyle.texi -init info.init
 simple_images_info simple_images.texi -init info.init
-#formatting_info ../coverage/formatting.texi -init info.init
+formatting_info ../coverage/formatting.texi -init info.init -U texi2html
